--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
 	"description": "Trevor Gau's solutions to Advent of Code",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"aoc:pull": "ts-node init suck seed",
+		"aoc:test": "ts-node run",
+		"aoc:submit": "ts-node submit"
 	},
 	"repository": {
 		"type": "git",
